--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <button type="submit" id="auth-button" class="btn-auth">Continue</button>
       </form>
     
+    <p><button type="button" id="forgot-password-button">Forgot Password?</button></p>
       <p class="toggle-auth">
         Already have an account? <a href="#" id="toggle-link">Login</a>
       </p>
