--- a/index.html
+++ b/index.html
@@ -293,6 +293,19 @@
 </div>
 
 
+<div id="discard-popup" class="popup hidden">
+  <div class="popup-content discard-popup-content">
+    <div class="discard-icon">
+      <i class="fa-solid fa-triangle-exclamation"></i>
+    </div>
+    <h2>Discard Changes?</h2>
+    <p>Are you sure you want to discard your changes?</p>
+    <div class="discard-buttons">
+      <button id="discard-cancel-btn" class="btn-cancel">Cancel</button>
+      <button id="discard-confirm-btn" class="thisisbtn-primary">Discard</button>
+    </div>
+  </div>
+</div>
 
 <!-- CATEGORY SELECTION POPUP -->
 <!-- CATEGORY SELECTION POPUP -->
