--- a/index.html
+++ b/index.html
@@ -318,28 +318,61 @@
       <div id="cr-cat-expense-tab" class="category-tab active">Expense</div>
     </div>
 
-    <!-- The plus button (now first) to reveal the add-new category form -->
+    <!-- The plus button (first) to reveal the Add New Category form -->
     <button id="cr-show-add-cat-form" class="add-cat-button">+</button>
 
     <!-- Grid of categories from Firestore -->
     <div id="cr-category-list" class="category-list">
       <!-- Categories will be injected here by JS -->
     </div>
+  </div> <!-- end of .thispopup -->
+</div> <!-- end of #cr-category-overlay -->
 
-    <!-- Add New Category Form (initially hidden) -->
-    <div id="cr-add-cat-form" class="add-cat-form hidden">
-      <label for="cr-new-cat-name">Category Name:</label>
-      <input type="text" id="cr-new-cat-name" placeholder="Enter name" />
-      
-      <p>Pick an icon:</p>
-      <div id="cr-icons-grid" class="icons-grid">
-        <!-- Icon choices injected via JavaScript -->
-      </div>
-      
-      <button id="cr-save-new-cat-btn">Save Category</button>
+<!-- FULL-SCREEN ADD NEW CATEGORY POPUP -->
+<div id="cr-add-cat-form" class="add-cat-form hidden">
+  <!-- Close button (X) in top-right corner -->
+  <button id="cr-close-add-cat-form" class="thisclose-btn">&times;</button>
+
+  <!-- Top section: image, name input, color circles -->
+  <div class="add-cat-top">
+    <div class="preview-icon">
+      <img src="default-preview.png" alt="Category Preview" id="cat-preview-img" />
+    </div>
+
+    <div class="cat-name-section">
+      <label for="cr-new-cat-name" class="cat-name-label">Name</label>
+      <input 
+        type="text"
+        id="cr-new-cat-name"
+        placeholder="Category name..."
+      />
+    </div>
+
+    <!-- Color palette row (like your screenshot) -->
+    <div class="color-palette" id="color-palette">
+      <!-- Example color circles -->
+      <div class="color-circle" data-color="#4CAF50"></div>
+      <div class="color-circle" data-color="#26a69a"></div>
+      <div class="color-circle" data-color="#03a9f4"></div>
+      <div class="color-circle" data-color="#2196f3"></div>
+      <div class="color-circle" data-color="#3f51b5"></div>
+      <div class="color-circle" data-color="#673ab7"></div>
+      <div class="color-circle" data-color="#9c27b0"></div>
+      <!-- etc. -->
     </div>
   </div>
+
+  <!-- Icon grid (if needed) -->
+  <div id="cr-icons-grid" class="icons-grid">
+    <!-- Icons injected via JavaScript -->
+  </div>
+
+  <!-- The Save button at the bottom (sticky) -->
+  <button id="cr-save-new-cat-btn" class="save-cat-btn">
+    Save
+  </button>
 </div>
+
 
 
 
